--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,1 +1,37 @@
 services:
+  api:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./apps/api
+    volumes:
+      - ./apps/api:/app
+    ports:
+      - 8080:8080
+    depends_on:
+      - postgres
+      - redis
+
+  postgres:
+    image: postgres:17.4
+    container_name: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: coredb
+    ports:
+      - 5432:5432
+    attach: false
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:8.0
+    container_name: redis
+    ports:
+      - 6379:6379
+    attach: false
+
+volumes:
+  postgres_data:
+    
+    
