--- a/.github/workflows/precheck.yml
+++ b/.github/workflows/precheck.yml
@@ -22,11 +22,13 @@ jobs:
           version: 10
           run_install: false
 
+      
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
+          cache-dependency-path: apps/web/pnpm-lock.yaml
 
       - name: Install dependencies
         run: pnpm install
