ci: Fix CI deployment for docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,4 +31,4 @@ jobs:
 
       - run: pip install mkdocs-material 
 
-      - run: mkdocs gh-deploy --force --config-file apps/docs/mkdocs.yaml
+      - run: mkdocs gh-deploy --force --config-file ./apps/docs/mkdocs.yml
