--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,5 +30,5 @@ jobs:
             mkdocs-material-
 
       - run: pip install mkdocs-material 
-
-      - run: mkdocs gh-deploy --force --config-file apps/docs/mkdocs.yaml
+      
+      - run: mkdocs gh-deploy --force --config-file ./apps/docs/mkdocs.yml
