ci: add react component test worflow

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,8 @@
     "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "test": "vitest run",
+    "test-cover": "vitest run --coverage",
     "preview": "vite preview",
     "prepare": "cd ../.. && husky ./apps/web/.husky",
     "format": "prettier --write . && git add --all",
@@ -46,6 +48,8 @@
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@tanstack/router-plugin": "^1.120.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -58,6 +62,7 @@
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.5.2",
     "playwright": "^1.52.0",
     "prettier": "3.5.3",
