--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Run playwright install
+        run: pnpm exec playwright install
+
       - name: Run tests
         run: pnpm test
 
