--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -3,6 +3,7 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./apps/api
+    env_file: "./apps/api/.env.local"
     volumes:
       - ./apps/api:/app
     ports:
