--- a/.github/workflows/sqlc_ci.yml
+++ b/.github/workflows/sqlc_ci.yml
@@ -3,6 +3,9 @@ on: [pull_request, push]
 jobs:
   diff:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: apps/api
     steps:
       - uses: actions/checkout@v4
       - uses: sqlc-dev/setup-sqlc@v3
