--- a/.github/workflows/sqlc_ci.yml
+++ b/.github/workflows/sqlc_ci.yml
@@ -1,5 +1,5 @@
 name: sqlc
-on: [pull_request, push]
+on: [push]
 jobs:
   diff:
     runs-on: ubuntu-latest
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: sqlc-dev/setup-sqlc@v3
         with:
-          sqlc-version: '1.28.0'
+          sqlc-version: '1.29.0'
       - run: sqlc diff
 
   vet:
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: sqlc-dev/setup-sqlc@v3
       with:
-        sqlc-version: '1.28.0'
+        sqlc-version: '1.29.0'
     # Start a PostgreSQL server
     - uses: sqlc-dev/action-setup-postgres@master
       with:
