--- a/apps/docs/mkdocs.yml
+++ b/apps/docs/mkdocs.yml
@@ -6,7 +6,7 @@ docs_dir: src
 theme:
   name: material
   icon:
-    repo: fontawesome/brands/git-alt 
+    repo: fontawesome/brands/git-alt
   palette:
     primary: green
   features:
@@ -21,7 +21,6 @@ plugins:
 copyright: >
   Copyright &copy; 2025 SwampHacks
 
-
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
@@ -34,24 +33,27 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
   - attr_list
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg  
-
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 nav:
   - Home:
-    - Introduction: index.md
-    - Getting Started: getting-started.md
+      - Introduction: index.md
+      - Getting Started: getting-started.md
   - Web:
-    - Overview: web/index.md
-    - Features: web/features.md
+      - Overview: web/index.md
+      - Installation: web/installation.md
+      - Features: web/features.md
   - API:
-    - Overview: api/index.md
-    - Getting Started: api/getting-started.md
-    - Reference: api/reference.md
+      - Overview: api/index.md
+      - Installation: api/installation.md
+      - Reference: api/reference.md
   - Discord Bot:
-    - Overview: discord-bot/index.md
-    - Commands: discord-bot/commands.md
+      - Overview: discord-bot/index.md
+      - Installation: discord-bot/installation.md
+      - Commands: discord-bot/commands.md
 
 extra:
   generator: false
