refactor: moved types and providers to their own files, added "state" param, and enhanced type safety

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-aria-components": "^1.8.0",
     "react-dom": "^19.1.0",
@@ -50,6 +51,7 @@
     "@tanstack/router-plugin": "^1.120.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
