--- a/apps/api/sqlc.yml
+++ b/apps/api/sqlc.yml
@@ -19,3 +19,12 @@ sql:
             go_type:
               import: "github.com/google/uuid"
               type: "UUID"
+          - db_type: "timestamptz"
+            go_type:
+              type: "time.Time"
+          - db_type: "timestamptz"
+            nullable: true
+            go_type:
+              type: "*time.Time"
+
+
