--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,10 +29,12 @@
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-aria-components": "^1.8.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.5",
     "tailwindcss-react-aria-components": "^2.0.0"
