fix: change docker compose to fit builds

--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -1,6 +1,6 @@
 # This is the alternate way to migrate and generate SQLC queries
 #
-# Note: Please have an .env.development in the root of the api/ folder
+# Note: Please have an .env.local in the root of the api/ folder
 
 include .env.local
 
