--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -19,6 +19,7 @@ services:
       - "5173:5173"
     volumes:
       - ./apps/web:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=development
     depends_on:
