--- a/apps/api/Dockerfile.dev
+++ b/apps/api/Dockerfile.dev
@@ -2,19 +2,13 @@ FROM golang:latest
 
 WORKDIR /app
 
-COPY go.mod go.sum ./
+COPY go.mod ./
 
 RUN go mod tidy
 
 RUN go install github.com/air-verse/air@latest
-RUN go install github.com/sqlc-dev/sqlc/cmd/sqlc@latest
-RUN go install github.com/pressly/goose/v3/cmd/goose@latest
 
 COPY . .
 
-# Create the entrypoint script
-COPY entrypoint.sh ./entrypoint.sh
-RUN chmod +x ./entrypoint.sh
-
 # Set the entrypoint to the script
-ENTRYPOINT ["./entrypoint.sh"]
+ENTRYPOINT ["air"]
