--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,7 +37,8 @@
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.5",
-    "tailwindcss-react-aria-components": "^2.0.0"
+    "tailwindcss-react-aria-components": "^2.0.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
