--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,12 +29,16 @@
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-aria-components": "^1.8.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.5",
-    "tailwindcss-react-aria-components": "^2.0.0"
+    "tailwindcss-react-aria-components": "^2.0.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
@@ -50,6 +54,7 @@
     "@tanstack/router-plugin": "^1.120.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.15",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
