--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -1,10 +1,10 @@
-include .env.local
+include .env.dev
 
 migrate-up:
-	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL} up
+	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATIONS} up
 
 migrate-down:
-	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL} down
+	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATIONS} down
 
 generate:
 	@sqlc generate
