fix: add go mod download

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -51,6 +51,8 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
+      - name: Download Go Modules
+        run: go mod download
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
