fix: potential run args fix

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -58,6 +58,7 @@ jobs:
         with:
           version: v2.1
           working-directory: apps/api
+          args: run ./...
 
   discord-bot-checks:
     name: Discord bot Lint & Format
