fix: adding visibility into downloaded packages

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -53,12 +53,14 @@ jobs:
           go-version: stable
       - name: Download Go Modules
         run: go mod download
+      - name: Check dependencies
+        run: |
+          go env
+          go list -m all
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
-          working-directory: apps/api
-          args: run ./...
 
   discord-bot-checks:
     name: Discord bot Lint & Format
