fix: replaced with working dir

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -61,6 +61,7 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
+          working-directory: apps/api
 
   discord-bot-checks:
     name: Discord bot Lint & Format
