fix: add go mod download (#33)
* fix: add go mod download

* fix: potential run args fix

* fix: adding visibility into downloaded packages

* fix: replaced with working dir

* fix: changed to v1.64.6 golangc-lint version

* fix: changed to v2.1.6 golangc-lint version

* fix: changing go.mod

* fix: add go tidy

* fix: clean up ci file

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -51,10 +51,12 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: stable
+      - name: Go tidy
+        run: go mod tidy
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.1
+          version: v2.1.6
           working-directory: apps/api
 
   discord-bot-checks:
