--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,8 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
     "@eslint/js": "^9.25.0",
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/tabler": "^1.2.19",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-onboarding": "^8.6.12",
     "@storybook/addon-styling-webpack": "^1.0.1",
@@ -52,6 +54,8 @@
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@tanstack/router-plugin": "^1.120.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -75,6 +79,7 @@
     "storybook": "^8.6.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "unplugin-icons": "^22.1.0",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
   },
