--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -1,10 +1,10 @@
 include .env.dev
 
 migrate-up:
-	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATIONS} up
+	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATION} up
 
 migrate-down:
-	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATIONS} down
+	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATION} down
 
 generate:
 	@sqlc generate
