--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "prepare": "cd ../.. && husky ./apps/web/.husky",
     "format": "prettier --write ./src && git add --all",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "generate:openapi": "openapi-typescript ../../shared/openapi/swagger.yaml -o ./src/lib/openapi/schema.d.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -74,6 +75,7 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.2",
+    "openapi-typescript": "^7.8.0",
     "playwright": "^1.52.0",
     "prettier": "3.5.3",
     "storybook": "^8.6.12",
