--- a/.github/workflows/web/lint-web.yml
+++ b/.github/workflows/web/lint-web.yml
@@ -1,21 +1,18 @@
-name: web-tests
+name: Web Lint
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
-    branches:
-      - master
+    branches: [master]
+    paths:
+      - 'apps/web/**'
 
 jobs:
-  unit:
-    name: Web unit tests
+  web-checks:
+    name: Web Lint & Format
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: apps/web
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,7 +23,6 @@ jobs:
           version: 10
           run_install: false
 
-      
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
@@ -37,9 +33,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run playwright install
-        run: pnpm exec playwright install
+      - name: Run ESLint
+        run: pnpm eslint . --ext .js,.jsx,.ts,.tsx
 
-      - name: Run tests
-        run: pnpm test
-
+      - name: Run Prettier
+        run: pnpm prettier . --check
