--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./apps/web:/app
+      - web_node_modules:/app/node_modules
     ports:
       - "5173:5173"
     environment:
@@ -46,5 +47,6 @@ services:
 
 volumes:
   postgres_data:
+  web_node_modules:
     
     
