--- a/.github/workflows/dev-build-deploy-api.yml
+++ b/.github/workflows/dev-build-deploy-api.yml
@@ -1,12 +1,12 @@
-name: Deploy API to Production
+name: Deploy API to Development
 
 on:
   push:
     branches:
-      - master
+      - dev
     paths:
       - 'apps/api/**'
-      - 'infra/docker-compose.yml'
+      - 'infra/docker-compose.dev.yml'
   workflow_dispatch:
 
 permissions:
@@ -14,15 +14,13 @@ permissions:
   packages: write
 
 concurrency:
-  group: production-deploy
+  group: dev-deploy
   cancel-in-progress: true
 
 jobs:
   build-and-push:
     name: Build and Push Docker Image to GHCR
     runs-on: ubuntu-latest
-    outputs:
-      image_tag: ${{ steps.set-tag.outputs.image_tag }}
 
     steps:
       - name: Checkout repository
@@ -46,7 +44,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
             --push \
-            -t ghcr.io/${{ github.repository_owner }}/core-api:latest \
+            -t ghcr.io/${{ github.repository_owner }}/core-api:dev \
             ./apps/api
 
   run-migrations:
@@ -64,7 +62,7 @@ jobs:
 
       - name: Run migrations
         run: |
-          goose -dir ./apps/api/internal/db/migrations postgres "${{ secrets.PROD_DB_URL }}" up
+          goose -dir ./apps/api/internal/db/migrations postgres "${{ secrets.DEV_DB_URL }}" up
 
   deploy:
     name: Deploy to Production Server
@@ -86,6 +84,6 @@ jobs:
           script: |
             cd /home/admin/core/infra
             git pull
-            infisical export --env=prod --format=dotenv --path="/api" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.api
-            docker compose pull api
-            docker compose up -d --no-deps --force-recreate api
+            infisical export --env=dev --format=dotenv --path="/api" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.dev.api
+            docker compose -f docker-compose.dev.yml pull api
+            docker compose -f docker-compose.dev.yml up -d --no-deps --force-recreate api
