--- a/.github/workflows/dev-build-deploy-api.yml
+++ b/.github/workflows/dev-build-deploy-api.yml
@@ -65,7 +65,7 @@ jobs:
           goose -dir ./apps/api/internal/db/migrations postgres "${{ secrets.DEV_DB_URL }}" up
 
   deploy:
-    name: Deploy to Production Server
+    name: Deploy to Development Server
     runs-on: ubuntu-latest
     needs: [build-and-push, run-migrations]
 
@@ -83,6 +83,9 @@ jobs:
           proxy_port: ${{ secrets.SSH_PORT_JUMP }}
           script: |
             cd /home/admin/core/infra
+            git fetch
+            git checkout dev
+            git reset --hard origin/dev
             git pull
             infisical export --env=dev --format=dotenv --path="/api" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.dev.api
             docker compose -f docker-compose.dev.yml pull api
