--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -1,8 +1,8 @@
 services:
-  api:
+  dev-api:
     image: ghcr.io/swamphacks/core-api:dev
     ports:
-      - "8080:8080"
+      - "8081:8080"
     restart: always
     env_file:
       - ./secrets/.env.dev.api
