--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,8 +34,10 @@
     "js-cookie": "^3.0.5",
     "ky": "^1.8.1",
     "react": "^19.1.0",
+    "react-aria": "^3.41.1",
     "react-aria-components": "^1.10.1",
     "react-dom": "^19.1.0",
+    "react-select": "^5.10.2",
     "react-stately": "^3.39.0",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
