Revert "TECH-123: Create sql query to fetch event, user, and application information"

--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -1,10 +1,10 @@
 include .env.dev
 
 migrate-up:
-	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATION} up
+	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATIONS} up
 
 migrate-down:
-	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATION} down
+	@goose -dir ./internal/db/migrations postgres ${DATABASE_URL_MIGRATIONS} down
 
 generate:
 	@sqlc generate
