--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,9 @@
     ]
   },
   "dependencies": {
+    "@internationalized/date": "^3.8.2",
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-form": "^1.14.1",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
     "axios": "^1.9.0",
@@ -43,7 +45,7 @@
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.5",
     "tailwindcss-react-aria-components": "^2.0.0",
-    "zod": "^3.25.56"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
