--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@internationalized/date": "^3.8.2",
+    "@react-aria/form": "^3.1.0",
+    "@react-stately/form": "^3.2.0",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-form": "^1.14.1",
     "@tanstack/react-query": "^5.75.5",
