--- a/apps/api/.env.dev.example
+++ b/apps/api/.env.dev.example
@@ -1,5 +1,6 @@
 DATABASE_URL="postgres://postgres:postgres@postgres:5432/coredb"
 DATABASE_URL_MIGRATION="postgres://postgres:postgres@localhost:5432/coredb"
+REDIS_URL="redis:6379"
 
 # For OAuth
 AUTH_DISCORD_CLIENT_ID=
