--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,19 @@ services:
     depends_on:
       - postgres
       - redis
+
+  email_worker:
+    build:
+      dockerfile: cmd/email_worker/Dockerfile
+      context: ./apps/api
+      target: dev
+    env_file: "./apps/api/.env.dev"
+    volumes:
+      - ./apps/api:/app
+    working_dir: /app/cmd/email_worker
+    depends_on:
+      - redis
+  
   web:
     build:
       context: ./apps/web
