--- a/.github/workflows/dev-build-deploy-email-worker.yml
+++ b/.github/workflows/dev-build-deploy-email-worker.yml
@@ -43,9 +43,11 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
+            --target prod \
             --push \
+            -f ./apps/api/cmd/email_worker/Dockerfile \
             -t ghcr.io/${{ github.repository_owner }}/core-email-worker:dev \
-            ./apps/api/cmd/email_worker
+            ./apps/api
 
   run-migrations:
     name: Run Goose Migrations
