--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,3 +6,11 @@ services:
     restart: always
     env_file:
       - ./secrets/.env.api
+
+  
+  email-worker:
+    image: ghcr.io/swamphacks/core-email-worker:latest
+    restart: always
+    env_file:
+      - ./secrets/.env.api
+
