--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -85,6 +85,7 @@
     "playwright": "^1.52.0",
     "prettier": "3.5.3",
     "storybook": "^8.6.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "unplugin-icons": "^22.1.0",
