--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -12,3 +12,10 @@ services:
     restart: always
     env_file:
       - ./secrets/.env.dev.api
+
+  dev-redis:
+    image: redis:8.0
+    command: ["redis-server", "--appendonly", "no", "--port", "6380", "--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
+    ports:
+      - 6380:6380
+    attach: false
