--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -75,6 +75,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
+    "csv-parser": "^3.2.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
