--- a/apps/web/src/features/FormBuilder/stories/applicationFormExample.json
+++ b/apps/web/src/features/FormBuilder/stories/applicationFormExample.json
@@ -15,12 +15,10 @@
 
           "content": [
             {
-              "type": "question",
-              "id": "firstName",
               "name": "firstName",
               "questionType": "shortAnswer",
-              "label": "First Name",
               "placeholder": "Enter your first name",
+              "label": "First Name",
               "required": true,
               "validation": {
                 "maxLength": 5
@@ -28,8 +26,6 @@
             },
 
             {
-              "type": "question",
-              "id": "lastName",
               "name": "lastName",
               "questionType": "shortAnswer",
               "placeholder": "Enter your last name",
@@ -46,8 +42,6 @@
 
           "content": [
             {
-              "type": "question",
-              "id": "age",
               "name": "age",
               "questionType": "number",
               "placeholder": "Enter your age",
@@ -60,8 +54,6 @@
             },
 
             {
-              "type": "question",
-              "id": "phone",
               "name": "phone",
               "questionType": "shortAnswer",
               "placeholder": "Enter a phone number",
@@ -79,8 +71,6 @@
 
           "content": [
             {
-              "type": "question",
-              "id": "preferredEmail",
               "name": "preferredEmail",
               "questionType": "shortAnswer",
               "placeholder": "Enter your email",
@@ -90,8 +80,6 @@
             },
 
             {
-              "type": "question",
-              "id": "universityEmail",
               "name": "universityEmail",
               "questionType": "shortAnswer",
               "placeholder": "Enter your school email",
@@ -102,8 +90,6 @@
           ]
         },
         {
-          "type": "question",
-          "id": "linkedin",
           "name": "linkedin",
           "questionType": "shortAnswer",
           "placeholder": "Enter link",
@@ -112,14 +98,24 @@
           "iconName": "linkedin"
         },
         {
-          "type": "question",
-          "id": "github",
           "name": "github",
           "questionType": "shortAnswer",
           "placeholder": "Enter link",
           "label": "Github URL",
           "required": true,
           "iconName": "github"
+        },
+        {
+          "name": "test",
+          "questionType": "checkbox",
+          "placeholder": "Enter link",
+          "required": true,
+          "options": [
+            {
+              "label": "By clicking this,  I certify that I am 18 years old or will turn 18 before January 23rd, 2026.",
+              "value": "test"
+            }
+          ]
         }
       ]
     },
@@ -134,8 +130,6 @@
 
           "content": [
             {
-              "type": "question",
-              "id": "school",
               "name": "school",
               "questionType": "select",
               "placeholder": "Select your school",
@@ -147,19 +141,14 @@
               }
             },
             {
-              "type": "question",
-              "id": "level",
               "name": "level",
               "questionType": "select",
               "placeholder": "Select your level",
               "label": "Level of Study",
               "required": true,
               "options": [
-                { "label": "1st Year", "value": "1" },
-                { "label": "2nd Year", "value": "2" },
-                { "label": "3rd Year", "value": "3" },
-                { "label": "4th Year", "value": "4" },
-                { "label": "Graduate Student", "value": "5" }
+                { "label": "Bachelors", "value": "1" },
+                { "label": "Masters", "value": "2" }
               ]
             }
           ]
@@ -170,8 +159,6 @@
 
           "content": [
             {
-              "type": "question",
-              "id": "year",
               "name": "year",
               "questionType": "select",
               "placeholder": "Select your year",
@@ -186,27 +173,21 @@
               ]
             },
             {
-              "type": "question",
-              "id": "graduationDate",
-              "name": "graduationDate",
+              "name": "graduationYear",
               "questionType": "select",
-              "placeholder": "Select graduation date",
-              "label": "Graduation Date",
+              "placeholder": "Select Year",
+              "label": "Graduation Year",
               "required": true,
-              "options": [
-                { "label": "1st Year", "value": "1" },
-                { "label": "2nd Year", "value": "2" },
-                { "label": "3rd Year", "value": "3" },
-                { "label": "4th Year", "value": "4" },
-                { "label": "Graduate Student", "value": "5" }
-              ]
+              "options": {
+                "data": "year",
+                "min": 2000,
+                "max": 2020
+              }
             }
           ]
         },
 
         {
-          "type": "question",
-          "id": "majors",
           "name": "majors",
           "questionType": "multiselect",
           "placeholder": "Select your major(s)",
@@ -218,8 +199,6 @@
         },
 
         {
-          "type": "question",
-          "id": "minors",
           "name": "minors",
           "questionType": "shortAnswer",
           "placeholder": "Enter your minor(s)",
@@ -235,8 +214,6 @@
 
       "content": [
         {
-          "type": "question",
-          "id": "experience",
           "name": "experience",
           "questionType": "multipleChoice",
           "label": "How many hackathons have you participated in?",
@@ -250,8 +227,6 @@
           ]
         },
         {
-          "type": "question",
-          "id": "shirtSize",
           "name": "shirtSize",
           "questionType": "select",
           "label": "T-Shirt Size",
@@ -262,6 +237,47 @@
             { "label": "Medium", "value": "medium" },
             { "label": "Large", "value": "large" }
           ]
+        },
+        {
+          "type": "question",
+          "name": "resume",
+          "questionType": "upload",
+          "label": "Upload your resume",
+          "required": true,
+          "validation": {
+            "validMimeTypes": ["application/pdf"]
+          }
+        }
+      ]
+    },
+
+    {
+      "type": "section",
+      "label": "SwampHacks Consent & Agreements",
+
+      "content": [
+        {
+          "name": "shareInfo",
+          "questionType": "checkbox",
+          "label": "I authorize you to share my application/registration information with Major League Hacking for event administration, ranking, and MLH administration in-line with the MLH Privacy Policy (https://github.com/MLH/mlh-policies/blob/main/privacy-policy.md). I further agree to the terms of both the MLH Contest Terms and Conditions (https://github.com/MLH/mlh-policies/blob/main/contest-terms.md) and the MLH Privacy Policy (https://github.com/MLH/mlh-policies/blob/main/privacy-policy.md).",
+          "required": true,
+          "options": [{ "label": "I agree", "value": "1" }]
+        }
+      ]
+    },
+
+    {
+      "type": "section",
+      "label": "MLH Consent & Agreements",
+      "description": "We are currently in the process of partnering with MLH. The following 3 checkboxes are for this partnership. If we do not end up partnering with MLH, your information will not be shared",
+
+      "content": [
+        {
+          "name": "agreeToConduct",
+          "questionType": "checkbox",
+          "label": "I have read and agree to the MLH Code of Conduct.(https://github.com/MLH/mlh-policies/blob/main/code-of-conduct.md)",
+          "required": true,
+          "options": [{ "label": "I agree", "value": "1" }]
         }
       ]
     }
